--- a/index.html
+++ b/index.html
@@ -421,7 +421,7 @@
         <div class="col mb-4">
           <div class="card py-5 aos-init aos-animate shadow" data-aos="fade-right" data-aos-duration="1200">
             <div class="card-body">
-              <h3 class="card-title">Beginners</h3>
+              <h3 class="card-title">Одна встреча</h3>
               <small>$</small><span class="display-3 fw-bold">12</span><small>/mo</small><br>
               <small class="text-muted">Billed annually</small>
               <div class="card-text mt-3">
@@ -440,16 +440,12 @@
           <div class="card border-0 py-5 aos-init aos-animate bg-dark text-white rounded border bg-dark rounded shadow" data-aos="fade-up" data-aos-duration="1600">
             <div class="card-body">
               <span class="badge bg-success my-3">Best buy</span>
-              <h2 class="card-title fs-1">Professionals</h2>
+              <h2 class="card-title fs-1">Абонемент и доступ в коммьюнити</h2>
               <small>$</small><span class="display-1 fw-bold">24</span><small>/mo</small><br>
               <small class="text-muted">Billed annually</small>
               <div class="card-text mt-3">
                 <ul class="py-3 px-sm-2 px-lg-4 text-start list-unstyled">
-                  <li class="py-3 border-bottom">Lorem ipsum dolor sit amet etiam porta sem</li>
-                  <li class="py-3 border-bottom">Consectetur adipiscing elit etiam porta sem</li>
-                  <li class="py-3 border-bottom">Integer molestie etiam porta sem lorem at massa</li>
-                  <li class="py-3 border-bottom">Facilisis in pretium nisl aliquet</li>
-                  <li class="py-3 border-bottom">Nulla volutpat aliquam velit</li>
+                  <li class="py-3 border-bottom">Здесь будет инфа о том, как проходит встреча. Время кол-выо человек, материалы</li>
                 </ul>
               </div>
               <a href="#" class="btn btn-primary btn-xl mt-3">Buy now</a>
@@ -459,7 +455,7 @@
         <div class="col mb-4">
           <div class="card py-5 aos-init aos-animate shadow" data-aos="fade-right" data-aos-duration="1200">
             <div class="card-body">
-              <h3 class="card-title">Beginners</h3>
+              <h3 class="card-title">Консультация-разбор</h3>
               <small>$</small><span class="display-3 fw-bold">12</span><small>/mo</small><br>
               <small class="text-muted">Billed annually</small>
               <div class="card-text mt-3">
@@ -484,7 +480,10 @@
         <div class="row py-vh-5 position-relative d-flex justify-content-between align-items-center">
           <div class="col-lg-5 text-white">
             <h1 class="display-1 fw-bold">Sell more, sell faster!</h1>
-            <p class="lead">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua.</p>
+            <p class="lead">
+              Встреча бесплатно = оставь отзыв с отметкой в соц. сети
+              Для участия оставь свой тг и номер (в формк будет выбор номера, тг и варианта оплаты)
+            </p>
           </div>
           <div class="col-6">
             <div class="col-12 border p-5 bg-white rounded shadow">
@@ -523,10 +522,8 @@
       <div class="row">
         <div class="col-lg-12 mb-2">
           <span class="text-primary">Why you can trust us</span>
-          <p class="pt-2 w-light fs-3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum dolores ratione quas quia
-            fuga quo est
-            similique quam aperiam voluptatum ducimus dignissimos inventore molestiae neque illum, tenetur
-            repudiandae!
+          <p class="pt-2 w-light fs-3">
+            Чтобы бегло говорить на английском, есть только один спосос - Говорить! Practice makes perfects
           </p>
         </div>
       </div>
