--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
   </div>
 </nav>
 <main class="text-color">
-  <div class="wrapper bg-light py-vh-6">
+  <div class="wrapper bg-light py-vh-6" style="background-image: url(/img/head.jpg);">
     <div class="container">
       <div class="row d-flex justify-content-center">
         <br>
@@ -167,7 +167,7 @@
             Приходи на встречи — прокачивай навыки говорения в классной компани и развивайся
           </p>
           <a href="#tarifs" class="btn btn-primary px-5 py-3 shadow me-1 button-color">Записаться</a>
-          <p class="lead fw-bold" style="color: #d557cc; padding-top: 10px !important;">–70% на первую встречу</p>
+          <p class="lead fw-bold" style="color: #d557cc; padding-top: 10px !important;">–60% на первую встречу</p>
         </div>
       </div>
     </div>
@@ -218,7 +218,8 @@
       <div class="col-md-6 col-lg-3 border-end" data-aos="fade-up">
         <div class="d-flex">
           <div class="col-md-3 flex-fill pt-3 pe-3 pe-md-0">
-            <img width="50" height="50" src="https://img.icons8.com/ios/50/friends.png" alt="friends"/>
+            <img width="50" height="50" src="/img/icons/friends.png" alt="friends"/>
+<!--            <img width="50" height="50" src="https://img.icons8.com/ios/50/friends.png" alt="friends"/>-->
           </div>
           <div class="col-md-9 flex-fill">
             <h3 class="h5 my-2">Безопасно</h3>
@@ -231,7 +232,8 @@
       <div class="col-md-6 col-lg-3 border-end" data-aos="fade-up" data-aos-delay="200">
         <div class="d-flex">
           <div class="col-md-3 flex-fill pt-3 pt-3 pe-3 pe-md-0">
-            <img width="50" height="50" src="https://img.icons8.com/ios/50/handshake-heart.png" alt="handshake-heart"/>
+            <img width="50" height="50" src="/img/icons/hands.png" alt="handshake-heart"/>
+<!--            <img width="50" height="50" src="https://img.icons8.com/ios/50/handshake-heart.png" alt="handshake-heart"/>-->
           </div>
           <div class="col-md-9 flex-fill">
             <h3 class="h5 my-2">Комфортно</h3>
@@ -244,7 +246,8 @@
       <div class="col-md-6 col-lg-3 border-end" data-aos="fade-up" data-aos-delay="400">
         <div class="d-flex">
           <div class="col-md-3 flex-fill pt-3 pt-3 pe-3 pe-md-0">
-            <img width="50" height="50" src="https://img.icons8.com/ios/50/critical-thinking--v1.png" alt="critical-thinking--v1"/>
+            <img width="50" height="50" src="/img/icons/brain.png" alt="critical-thinking--v1"/>
+<!--            <img width="50" height="50" src="https://img.icons8.com/ios/50/critical-thinking&#45;&#45;v1.png" alt="critical-thinking&#45;&#45;v1"/>-->
           </div>
           <div class="col-md-9 flex-fill">
             <h3 class="h5 my-2">Интересно</h3>
@@ -256,8 +259,9 @@
       </div>
       <div class="col-md-6 col-lg-3" data-aos="fade-up" data-aos-delay="400">
         <div class="d-flex">
-          <div class="col-md-3 flex-fill pt-3 pt-3 pe-3 pe-md-0 saturate">
-            <img width="48" height="48" src="/img/icons8-hundred-points-48.png" alt="hundred-points"/>
+          <div class="col-md-3 flex-fill pt-3 pt-3 pe-3 pe-md-0">
+            <img width="50" height="50" src="/img/icons/talking.png" alt="hundred-points"/>
+<!--            <img width="48" height="48" src="/img/icons8-hundred-points-48.png" alt="hundred-points"/>-->
           </div>
           <div class="col-md-9 flex-fill">
             <h3 class="h5 my-2">Эффективно</h3>
@@ -299,6 +303,14 @@
           <p class="py-5 border-top border-dark" style="font-size: 22px !important">
             Начнешь смело говорить в любой ситуации и с разными людьми, без страхов и комплексов
           </p>
+        </div>
+      </div>
+      <div class="container">
+        <div class="row d-flex justify-content-center">
+          <br>
+          <div class="col-12 col-xl-8 text-center">
+            <a href="#tarifs" class="btn btn-primary px-5 py-3 shadow me-1 button-color">Записаться</a>
+          </div>
         </div>
       </div>
     </div>
@@ -436,13 +448,10 @@
               <span class="display-3 fw-bold">390</span><br>
               <div class="card-text mt-3">
                 <ul class="checked py-4 px-sm-2 px-lg-4 text-start list-unstyled">
-                  <li class="py-2 border-bottom">Facilisis in pretium nisl aliquet</li>
-                  <li class="py-2 border-bottom">Nulla volutpat aliquam velit</li>
-                  <li class="py-2 border-bottom">Faucibus porta lacus fringilla vel etiam</li>
-                  <li class="py-2 border-bottom">Aenean sit amet erat nunc</li>
+                  <li class="py-2">Первая встреча со скидкой 60%</li>
                 </ul>
               </div>
-              <a href="#" class="btn btn-primary px-5 py-3 shadow me-1 button-color" id="service1Button">Записаться</a>
+              <a href="#" class="btn btn-primary px-5 py-3 shadow me-1 button-color" id="service1Button">Выбрать тариф</a>
             </div>
           </div>
         </div>
@@ -460,7 +469,7 @@
                   <li class="py-2 border-bottom">Поболтать без заморочек</li>
                 </ul>
               </div>
-              <a href="#" class="btn btn-primary px-5 py-3 shadow me-1 button-color" id="service2Button">Записаться</a>
+              <a href="#" class="btn btn-primary px-5 py-3 shadow me-1 button-color" id="service2Button">Выбрать тариф</a>
             </div>
           </div>
         </div>
@@ -473,12 +482,11 @@
               <div class="card-text mt-3">
                 <ul class="checked py-4 px-sm-2 px-lg-4 text-start list-unstyled">
                   <li class="py-2 border-bottom">Для тех, кто хочет улучшить язык и поработать дополнительно</li>
-                  <li class="py-2 border-bottom">Nulla volutpat aliquam velit</li>
-                  <li class="py-2 border-bottom">Faucibus porta lacus fringilla vel etiam</li>
-                  <li class="py-2 border-bottom">Aenean sit amet erat nunc</li>
+                  <li class="py-2 border-bottom">Индивидуальная обратная связь</li>
+                  <li class="py-2 border-bottom">Таблица с разбором точек роста</li>
                 </ul>
               </div>
-              <a href="#" class="btn btn-primary px-5 py-3 shadow me-1 button-color" id="service3Button">Записаться</a>
+              <a href="#" class="btn btn-primary px-5 py-3 shadow me-1 button-color" id="service3Button">Выбрать тариф</a>
             </div>
           </div>
         </div>
@@ -486,20 +494,22 @@
     </div>
   </div>
   <div class="py-vh-4" id="form">
-    <div class="position-relative bg-primary bg-cover bp-center" style="background-image: url(/img/b3a3ee2e-1024.jpeg);">
-      <div class="position-absolute w-100 h-100 opacity-75 bg-primary"></div>
+    <div class="position-relative bg-primary bg-cover bp-center" style="background-image: url(/img/form.jpg);">
+<!--      <div class="position-absolute w-100 h-100 opacity-75 bg-primary"></div>-->
       <div class="container">
         <div class="row py-vh-5 position-relative d-flex justify-content-between align-items-center">
           <div class="col-lg-5 text-white">
-            <h1 class="display-1 fw-bold">Sell more, sell faster!</h1>
-            <p class="lead">
-              Встреча бесплатно = оставь отзыв с отметкой в соц. сети
-              Для участия оставь свой тг и номер (в формк будет выбор номера, тг и варианта оплаты)
+            <p class="lead" style="font-size: 30px; font-weight: 500;">
+              Speaking — самый востребованный навык.
+              <br>
+              И другого способа его прокачать,
+              <br>
+              кроме как <span style="color: #d557cc">говорить</span>, не существует.
             </p>
           </div>
           <div class="col-lg-6 col-md-8 col-sm-12">
             <div class="col-12 border p-5 bg-white rounded shadow">
-              <h2 class="fw-bold display-5 mb-4">Присоединяйся!</h2>
+              <h2 class="fw-bold display-5 mb-4" style="color: #d557cc;">Присоединяйся!</h2>
               <div class="col-12">
                 <div class="form-floating mb-3">
                   <input type="text" class="form-control" id="floatingInputName" placeholder="name@example.com">
@@ -532,8 +542,14 @@
                 </div>
 
                 <div class="d-grid">
-                  <button class="btn btn-primary btn-lg mt-4 btn-xl fw-light" type="button" id="joinButton" data-bs-toggle="tooltip" data-bs-placement="top">
-                    Присоединиться!
+                  <button
+                          class="btn btn-primary btn-lg mt-4 btn-xl fw-light button-color"
+                          type="button"
+                          id="joinButton"
+                          data-bs-toggle="tooltip"
+                          data-bs-placement="top"
+                          style="font-weight: 500 !important;">
+                    Записаться
                   </button>
                 </div>
               </div>
@@ -650,8 +666,6 @@
     button.textContent = "Заявка отправлена!";
   });
 </script>
-
-
 
 <footer>
   <div class="container text-center py-3 small">Информация размещённая на сайте не является публичной офертой</div>
